--- a/config/cijoe.apache.conf.example
+++ b/config/cijoe.apache.conf.example
@@ -1,7 +1,6 @@
 <VirtualHost *:80>
-  # all of the apps running CIJoe
   RackBaseURI /yrapp/public
-  RackBaseURI /another/public
+  RackBaseURI /anotherapp/public
 
   ServerName cijoe.yrcompany.com
   SetEnv PATH /path/to/git:/path/to/cijoe
@@ -12,6 +11,6 @@
   CustomLog /path/to/cijoe-passenger/logs/ci-access_log combined
 
   PassengerMaxInstancesPerApp 1
-   # 1 for each CIJoe Instance
-  PassengerMaxPoolSize 10
+  # set this higher than the total number of cijoe apps you have
+  PassengerMaxPoolSize 20
 </VirtualHost>
